change Q6, still gets 96 but with Wrong Answer